--- a/microsoft/package.json
+++ b/microsoft/package.json
@@ -23,6 +23,8 @@
     "botbuilder": "^3.6.0",
     "moment-timezone": "^0.5.13",
     "request": "^2.81.0",
-    "restify": "^4.3.0"
+    "body-parser": "^1.17.1",
+    "restify": "^4.3.0",
+    "express": "^4.15.2"
   }
 }
